--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                         <li class="layui-nav-item">
                             <a href="javascript:;"><span class="iconfont icon-user"></span>个人资料</a>
                             <dl class="layui-nav-child">
-                                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
+                                <dd><a href="./user/user-info.html" target="fm"><i
+                                            class="layui-icon layui-icon-app"></i> 基本资料</a>
+                                </dd>
                                 <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
                                 <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
                             </dl>
