--- a/user/user-info.html
+++ b/user/user-info.html
@@ -15,7 +15,9 @@
         <div class="layui-card-header">修改用户信息</div>
         <div class="layui-card-body">
             <!-- form表单 -->
-            <form class="layui-form" action="">
+            <form class="layui-form" lay-filter="formInfo">
+                <!-- 隐藏的input -->
+                <input type="hidden" name="id" value="">
                 <div class="layui-form-item style">
                     <label class="layui-form-label">登录名称</label>
                     <div class="layui-input-block">
@@ -39,8 +41,8 @@
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block">
-                        <button class="layui-btn" lay-submit lay-filter="formDemo">提交修改</button>
-                        <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                        <button class="layui-btn" lay-submit lay-filter="formDemo" id="btnTj">提交修改</button>
+                        <button type="reset" class="layui-btn layui-btn-primary" id="btnrester">重置</button>
                     </div>
                 </div>
             </form>
