--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <dd><a href="./article/art-cate.html" target="fm"><i
                                             class="layui-icon layui-icon-app"></i> 文章类别</a>
                                 </dd>
-                                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
+                                <dd><a href="./article/art-list.html" target="fm"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
                                 <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
                             </dl>
                         </li>
